syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "DrawService.Api.Models.Protos.History";

package draw_history;

service DrawHistory {
    rpc Get(HistoryProtoRequest) returns (HistoryProtoResponse);
} 

message HistoryProtoRequest {
    string drawId = 1;
}

message HistoryProtoResponse {
    bool success = 1;
    string errorMsg = 2;
    DrawHistoryProto Draw = 3;
}

message DrawHistoryProto {
    google.protobuf.Timestamp drawDate = 1;
    string drawStatus = 2;
    int32 participants = 3;
    int64 houseProfitInCents = 4;
    repeated PrizeHistoryProto prizes = 5;
}

message PrizeHistoryProto {
    string ticketId = 1;
    int64 amountInCents = 2;
    string tier = 3;
}
